Begin styling navbar

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intuitive BioTechnologies</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="top-decoration"></div>
     <div class="navbar">
-        <div class="navbar-logo"></div>
+        <div class="navbar-logo">
+            <img src="IBT-logo.webp" alt="Intuitive BioTechnologies logo" width="75px" height="75px">
+        </div>
         <div class="navbar-links">
             <ul>
                 <li><a href='#'>About Us</a></li>
