Implement transitions for section titles and add bg to main header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 
 <header>
@@ -31,17 +32,17 @@
         <div class="hero">
             <div class="hero-left">
                 <div class="hero-left-title">Client-driven and efficient</div>
-                <div class="hero-subtext">
+                <div class="hero-subtext hidden">
                     Providing cost-efficient, innovative, and time-saving 
                     in vitro testing.
                 </div>
             </div>
             <div class="hero-right">
-                <div class="hero-right-image">
+                <div class="hero-right-image hidden">
                     <img src="images/IBT-header-image.webp" alt="Compound microscope" width="500px" height="370px">
                 </div>
                 <div class="hero-right-content">
-                    <div class="hero-right-title">About Us</div>
+                    <div class="hero-right-title hidden">About Us</div>
                     <p>
                         <span class="green">Intuitive BioTechnologies</span> (IBT) is a service-based contract 
                         research organization, specializing in cell-based in vitro 
@@ -67,12 +68,12 @@
     </div>
 
     <div class="services" id="services">
-        <div class="services-title">
+        <div class="services-title hidden">
             Services Offered
         </div>
         <div class="cards">
             <div class="card">
-                <div class="card-img">
+                <div class="card-img hidden">
                     <img src="images/microscope-line-drawing-svgrepo-com.svg" alt="Microscope icon" width="100px" height="100px">
                 </div>
                 <div class="card-title">Services</div>
@@ -86,7 +87,7 @@
             </div>
 
             <div class="card">
-                <div class="card-img">
+                <div class="card-img hidden">
                     <img src="images/flask-3-svgrepo-com.svg" alt="Beaker icon" width="100px" height="100px">
                 </div>
                 <div class="card-title">Tests</div>
@@ -111,7 +112,7 @@
     </div>
 
     <div class="contact" id="contact-us">
-        <div class="contact-title">
+        <div class="contact-title hidden">
             Contact Us
         </div>
         <div class="contact-content">
@@ -151,7 +152,7 @@
     </div>
 
     <div class="footer">
-        Intuitive BioTechnologies | Jared Paul Guevara | 2024
+        Intuitive BioTechnologies | 2024
     </div>
 
 </body>
